# docs/swagger/swagger.json
@@ -1,7 +1,7 @@
 {
     "swagger": "2.0",
     "info": {
-        "description": "This is a server to get item details for MercadoLibre frontend page.",
+        "description": "This is an API to get item details for MercadoLibre frontend page.",
         "title": "MELI Item Detail",
         "termsOfService": "http://swagger.io/terms/",
         "contact": {},
@@ -17,14 +17,14 @@
                 "summary": "Get item info",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "The users id",
+                        "type": "string",
+                        "description": "The item id",
                         "name": "itemID",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "User id",
                         "name": "userID",
                         "in": "query",
@@ -33,19 +33,34 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "400": {
-                        "description": "The specified URL is invalid"
+                        "description": "The specified URL is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "404": {
-                        "description": "Not found"
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "408": {
-                        "description": "Request timed out"
+                        "description": "Request timed out",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "500": {
-                        "description": "Internal server error"
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     }
                 }
             }
@@ -59,14 +74,21 @@
                 "summary": "Get recommendations",
                 "parameters": [
                     {
-                        "type": "integer",
-                        "description": "The users id",
+                        "type": "string",
+                        "description": "The item id",
                         "name": "itemID",
                         "in": "path",
                         "required": true
                     },
                     {
-                        "type": "integer",
+                        "type": "string",
+                        "description": "Seller id",
+                        "name": "sellerID",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "User id",
                         "name": "userID",
                         "in": "query",
@@ -75,20 +97,55 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "OK"
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "400": {
-                        "description": "The specified URL is invalid"
+                        "description": "The specified URL is invalid",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "404": {
-                        "description": "Not found"
+                        "description": "Not found",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "408": {
-                        "description": "Request timed out"
+                        "description": "Request timed out",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     },
                     "500": {
-                        "description": "Internal server error"
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.Response"
+                        }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Response": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                },
+                "success": {
+                    "type": "boolean"
                 }
             }
         }
